Fixed positioning that Flatly already covers.

--- a/HealthNet/health/static/main.css
+++ b/HealthNet/health/static/main.css
@@ -1,7 +1,6 @@
 
 body {
     background: #eee !important;
-    padding-top: 70px;
 }
 
 legend {
